1998-07-10  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (unedit-without-baserev): Also clean up "2" directory.

1998-07-08  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* edit.c (unedit_fileproc): If the Baserev file is missing, don't
	get the working file from CVS/Base.  The previous code could get
	you version 1.1 of the working file and put 1.2 in CVS/Entries.
	* sanity.sh (unedit-without-baserev): New tests test for this.

1998-07-02  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (unedit-without-baserev): Move the test itself to be
	in the same order as in the "tests" variable.

1998-07-02  Ian Lance Taylor  <ian@cygnus.com>

	* rcscmds.c: Don't include <stdarg.h> or <vasprintf.h>.  Don't
	declare vasprintf.
	(call_diff_printf_output): Remove.
	(call_diff_stdout_callbacks): Don't initialize printf_output
	field--it has been removed from the interface.
	(call_diff_file_callbacks): Likewise.

1998-07-01  Jim Meyering  <meyering@ascend.com>

	* edit.c (unedit_fileproc): Handle the case in which base_get
	returns a NULL baserev.  That happens when a file being `unedit'ed
	exists in the CVS/Base directory, but isn't listed in the CVS/Baserev
	file.  The one case I've seen had no Baserev file at all.  The symptom
	(if you're lucky) is a segmentation fault upon unedit.  If you use
	SunOS4.1.4 for which printf prints NULL pointers as `(null)', your
	unedit command will complete normally, but it will have corrupted
	your CVS/Entries file and a subsequent update may result in an
	assertion failure, a core dump, and a stale lock in the repository.
	* sanity.sh (unedit-without-baserev): New test for this.

1998-07-01  Andy Mortimer of aeat.co.uk
	and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (server_updated): Use a prototype if we are using them
	for declarations.

1998-06-29  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (commit-readonly): Protect keyword against expansion