@@ -1,3 +1,10 @@
+1998-07-11  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* tag.c (check_fileproc): Calculate the revision to be tagged the
+	same way that tag_fileproc does.
+	* sanity.sh (taginfo): New tests, test for this (before this fix,
+	brtag had said 1.1 not 1.1.2.1).
+
 1998-07-10  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* sanity.sh (unedit-without-baserev): Also clean up "2" directory.
